--- a/Quality/Quality/Views/PublicWondow/FabricRefNoList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/FabricRefNoList.cshtml
@@ -100,6 +100,7 @@
                 Seq: RowData[0],
                 Seq1: RowData[0].split('-')[0],
                 Seq2: RowData[0].split('-')[1],
+                SCIRefno: RowData[1],
                 Refno: RowData[2],
                 Color: RowData[3]
             }
